--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <body>
         <div id = "fullpage">
             <div class = "section" id = "page-main">
-                <p class = "sub-title">신뢰를 기반으로 공감하는 모바일기기 전문 수리업체—</p>
+                <p class = "sub-title">신뢰할 수 있는 모바일기기 전문 수리업체—</p>
                 <p class = "title">서울픽스킹</p>
             </div>
             <div class = "section">
-                
+
             </div>
         </div>
         <script src = "./public/js/script.js"></script>
