--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                 <p class = "sub-title">신뢰할 수 있는 모바일기기 전문 수리업체—</p>
                 <p class = "title">서울픽스킹</p>
             </div>
-            <div class = "section">
-
+            <div class = "section" id = "page-1">
+                <p class = "sub-title">2022.12.</p>
+                <p class = "title">Coming Soon!</p>
+                <p class = "sub-title">곧 만나요!</p>
             </div>
         </div>
         <script src = "./public/js/script.js"></script>
