--- a/index.html
+++ b/index.html
@@ -11,15 +11,35 @@
         <title>서울픽스킹</title>
     </head>
     <body>
-        <div id = "fullpage">
-            <div class = "section" id = "page-main">
-                <p class = "sub-title">신뢰할 수 있는 모바일기기 전문 수리업체—</p>
-                <p class = "title">서울픽스킹</p>
-            </div>
-            <div class = "section" id = "page-1">
-                <p class = "sub-title">2022.12.</p>
-                <p class = "title">Coming Soon!</p>
-                <p class = "sub-title">곧 만나요!</p>
+        <div id = "nav-bg" class = "btn"></div>
+        <div id = "toggle-btn" class = "btn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        
+        <div class = "wrapper">
+            <nav>
+                <ul>
+                    <li><a class = "link" href = "#0">홈</a></li>
+                    <li><a class = "link" href = "#0">스토리</a></li>
+                    <li><a class = "link" href = "#0">수리 단가</a></li>
+                    <li><a class = "link" href = "#0">문의</a></li>
+                </ul>
+            </nav>
+            
+            <div id = "content">
+                <div id = "fullpage">
+                    <div class = "section" id = "page-main">
+                        <p class = "sub-title">신뢰할 수 있는 모바일기기 전문 수리업체—</p>
+                        <p class = "title">서울픽스킹</p>
+                    </div>
+                    <div class = "section" id = "page-1">
+                        <p class = "sub-title">2022.12.</p>
+                        <p class = "title">Coming Soon!</p>
+                        <p class = "sub-title">곧 만나요!</p>
+                    </div>
+                </div>
             </div>
         </div>
         <script src = "./public/js/script.js"></script>
