--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a class = "link" href = "#0">홈</a></li>
                     <li><a class = "link" href = "#0">스토리</a></li>
-                    <li><a class = "link" href = "#0">수리 단가</a></li>
+                    <li><a class = "link" href = "#0">서비스</a></li>
                     <li><a class = "link" href = "#0">문의</a></li>
                 </ul>
             </nav>
