--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class = "wrapper">
             <nav>
                 <ul>
-                    <li><a class = "link" href = "/">홈</a></li>
+                    <li><a class = "link" href = "#">홈</a></li>
                     <li><a class = "link" href = "#0">스토리</a></li>
                     <li><a class = "link" href = "#0">서비스</a></li>
                     <li><a class = "link" href = "#0">문의</a></li>
