--- a/story.html
+++ b/story.html
@@ -31,13 +31,12 @@
             <div id = "content">
                 <div id = "fullpage">
                     <div class = "section" id = "page-main">
-                        <p class = "sub-title">신뢰할 수 있는 모바일기기 전문 수리업체—</p>
-                        <p class = "title">서울픽스킹</p>
+                        <p class = "sub-title">서울픽스킹—</p>
+                        <p class = "title">Story</p>
                     </div>
                     <div class = "section" id = "page-1">
-                        <p class = "sub-title">2022.12.</p>
-                        <p class = "title">Coming Soon!</p>
-                        <p class = "sub-title">곧 만나요!</p>
+                        <p class = "sub-title">우리가 창업으로 걸어온 길.</p>
+                        <p class = "title">곧 공개됩니다!</p>
                     </div>
                 </div>
             </div>
