--- a/story.html
+++ b/story.html
@@ -37,6 +37,7 @@
                     <div class = "section" id = "page-1">
                         <p class = "sub-title">우리가 창업으로 걸어온 길.</p>
                         <p class = "title">곧 공개됩니다!</p>
+                        <p class = "sub-title">어느 고등학생의 파란만장한 창업 이야기.</p>
                     </div>
                 </div>
             </div>
