--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul>
                     <li><a class = "link" href = "./index.html">홈</a></li>
                     <li><a class = "link" href = "./story.html">스토리</a></li>
-                    <li><a class = "link" href = "#0">서비스</a></li>
-                    <li><a class = "link" href = "#0">문의</a></li>
+                    <li><a class = "link" href = "./service.html">서비스</a></li>
+                    <li><a class = "link" href = "./content.html">문의</a></li>
                 </ul>
             </nav>
             
