--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
                 <div id = "fullpage">
                     <div class = "section" id = "page-main">
                         <p class = "sub-title">서울픽스킹—</p>
-                        <p class = "title">Story</p>
+                        <p class = "title">Service</p>
                     </div>
                     <div class = "section" id = "page-1">
                         <p class = "sub-title">우리가 창업으로 걸어온 길.</p>
