--- a/service.html
+++ b/service.html
@@ -24,7 +24,7 @@
                     <li><a class = "link" href = "./index.html">홈</a></li>
                     <li><a class = "link" href = "./story.html">스토리</a></li>
                     <li><a class = "link" href = "./service.html">서비스</a></li>
-                    <li><a class = "link" href = "./content.html">문의</a></li>
+                    <li><a class = "link" href = "./contact.html">문의</a></li>
                 </ul>
             </nav>
             
@@ -35,9 +35,9 @@
                         <p class = "title">Service</p>
                     </div>
                     <div class = "section" id = "page-1">
-                        <p class = "sub-title">우리가 창업으로 걸어온 길.</p>
+                        <p class = "sub-title">정직한 서비스, 확실한 서비스.</p>
                         <p class = "title">곧 공개됩니다!</p>
-                        <p class = "sub-title">어느 고등학생의 파란만장한 창업 이야기.</p>
+                        <p class = "sub-title">손님이 항상 만족하는 서비스를 위해 노력하겠습니다.</p>
                     </div>
                 </div>
             </div>
