--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
                 <div id = "fullpage">
                     <div class = "section" id = "page-main">
                         <p class = "sub-title">서울픽스킹—</p>
-                        <p class = "title">Service</p>
+                        <p class = "title">Contact</p>
                     </div>
                     <div class = "section" id = "page-1">
-                        <p class = "sub-title">우리가 창업으로 걸어온 길.</p>
-                        <p class = "title">곧 공개됩니다!</p>
-                        <p class = "sub-title">어느 고등학생의 파란만장한 창업 이야기.</p>
+                        <p class = "sub-title">문의사항이 있으신가요?</p>
+                        <p class = "title">조금만 기다려주세요!</p>
+                        <p class = "sub-title">최선의 서비스로 보답하겠습니다.</p>
                     </div>
                 </div>
             </div>
