--- a/service.html
+++ b/service.html
@@ -21,7 +21,7 @@
         <div class = "wrapper">
             <nav>
                 <ul>
-                    <li><a class = "link" href = "./index.html">홈</a></li>
+                    <li><a class = "link" href = "/">홈</a></li>
                     <li><a class = "link" href = "./story.html">스토리</a></li>
                     <li><a class = "link" href = "./service.html">서비스</a></li>
                     <li><a class = "link" href = "./contact.html">문의</a></li>
