--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a class = "link" href = "/">홈</a></li>
                     <li><a class = "link" href = "./story.html">스토리</a></li>
                     <li><a class = "link" href = "./service.html">서비스</a></li>
-                    <li><a class = "link" href = "./contect.html">문의</a></li>
+                    <li><a class = "link" href = "./contact.html">문의</a></li>
                 </ul>
             </nav>
             
