--- a/pricing.html
+++ b/pricing.html
@@ -31,11 +31,14 @@
             <div id = "content">
                 <div id = "fullpage">
                     <div class = "section" id = "page-main">
-                        <p class = "sub-title">서울픽스킹—</p>
-                        <p class = "title">Service</p>
-                    </div>
-                    <div class = "section" id = "page-1">
-
+                        <p class = "title">가격 확인하기</p>
+                        <p class = "sub-title">부품 가격을 확인해 보세요!</p>
+                        <select name = "sdaf" class = "select" id = "select_phone">
+                            <option value = "ip5">아이폰 5</option>
+                            <option value = "ip5c">아이폰 5C</option>
+                            <option value = "ip5s">아이폰 5S</option>
+                            <option value = "ip6">아이폰 6</option>
+                        </select>
                     </div>
                 </div>
             </div>
