--- a/pricing.html
+++ b/pricing.html
@@ -34,50 +34,51 @@
                     <p class = "sub-title">부품 가격을 확인해 보세요!</p>
                     <select class = "select" id = "select_phone">
                         <option value = "" selected disabled hidden>기종 선택..</option>
-                        <option value = "se1">아이폰 SE (1세대)</option>
-                        <option value = "se2">아이폰 SE (2세대)</option>
-                        <option value = "se3">아이폰 SE (3세대)</option>
-                        <option value = "5g">아이폰 5</option>
-                        <option value = "5c">아이폰 5C</option>
-                        <option value = "5s">아이폰 5S</option>
-                        <option value = "6g">아이폰 6</option>
-                        <option value = "6p">아이폰 6 Plus</option>
-                        <option value = "6s">아이폰 6S</option>
-                        <option value = "6sp">아이폰 6S Plus</option>
-                        <option value = "7g">아이폰 7</option>
-                        <option value = "7p">아이폰 7 Plus</option>
-                        <option value = "8g">아이폰 8</option>
-                        <option value = "8p">아이폰 8 Plus</option>
-                        <option value = "x">아이폰 X</option>
-                        <option value = "xs">아이폰 XS</option>
-                        <option value = "xsm">아이폰 XS Max</option>
-                        <option value = "xr">아이폰 XR</option>
-                        <option value = "11g">아이폰 11</option>
-                        <option value = "11p">아이폰 11 Pro</option>
-                        <option value = "12pm">아이폰 11 Pro Max</option>
-                        <option value = "12m">아이폰 12 mini</option>
-                        <option value = "12g">아이폰 12</option>
-                        <option value = "12p">아이폰 12 Pro</option>
-                        <option value = "12pm">아이폰 12 Pro Max</option>
-                        <option value = "13m">아이폰 13 mini</option>
-                        <option value = "13g">아이폰 13</option>
-                        <option value = "13p">아이폰 13 Pro</option>
-                        <option value = "13pm">아이폰 13 Pro Max</option>
+                        <option value = "0">아이폰 SE (1세대)</option>
+                        <option value = "1">아이폰 SE (2세대)</option>
+                        <option value = "2">아이폰 SE (3세대)</option>
+                        <option value = "3">아이폰 5</option>
+                        <option value = "4">아이폰 5C</option>
+                        <option value = "5">아이폰 5S</option>
+                        <option value = "6">아이폰 6</option>
+                        <option value = "7">아이폰 6 Plus</option>
+                        <option value = "8">아이폰 6S</option>
+                        <option value = "9">아이폰 6S Plus</option>
+                        <option value = "10">아이폰 7</option>
+                        <option value = "11">아이폰 7 Plus</option>
+                        <option value = "12">아이폰 8</option>
+                        <option value = "13">아이폰 8 Plus</option>
+                        <option value = "14">아이폰 X</option>
+                        <option value = "15">아이폰 XS</option>
+                        <option value = "16">아이폰 XS Max</option>
+                        <option value = "17">아이폰 XR</option>
+                        <option value = "18">아이폰 11</option>
+                        <option value = "19">아이폰 11 Pro</option>
+                        <option value = "20">아이폰 11 Pro Max</option>
+                        <option value = "21">아이폰 12 mini</option>
+                        <option value = "22">아이폰 12</option>
+                        <option value = "23">아이폰 12 Pro</option>
+                        <option value = "24">아이폰 12 Pro Max</option>
+                        <option value = "25">아이폰 13 mini</option>
+                        <option value = "26">아이폰 13</option>
+                        <option value = "27">아이폰 13 Pro</option>
+                        <option value = "28">아이폰 13 Pro Max</option>
                     </select>
                     <select class = "select" id = "select_parts">
                         <option value = "" selected disabled hidden>부품 선택..</option>
-                        <option value = "display">액정</option>
-                        <option value = "battery">배터리</option>
-                        <option value = "housing">하우징(후면)</option>
-                        <option value = "dock">독커넥터</option>
-                        <option value = "taptic">탭틱엔진</option>
-                        <option value = "front-camera">전면 카메라</option>
-                        <option value = "back-camera">후면 카메라</option>
-                        <option value = "front-speaker">수화부 스피커</option>
-                        <option value = "bottom-speaker">하단 스피커</option>
-                        <option value = "volume-cable">볼륨 케이블</option>
-                        <option value = "power-cable">전원 케이블</option>
-                        <option value = "wireless">무선충전 코일</option>
+                        <option value = "0">액정</option>
+                        <option value = "4">배터리</option>
+                        <option value = "6">하우징(후면)</option>
+                        <option value = "7">독커넥터</option>
+                        <option value = "8">탭틱엔진</option>
+                        <option value = "9">전면 카메라</option>
+                        <option value = "10">후면 카메라</option>
+                        <option value = "11">수화부 스피커</option>
+                        <option value = "12">하단 스피커</option>
+                        <option value = "13">볼륨 케이블</option>
+                        <option value = "14">전원 케이블</option>
+                        <option value = "15">무선충전 코일</option>
+                        <option value = "16">듀얼심 개조</option>
                     </select>
                     <button id = "searchPriceButton" onclick = "searchPrice()">검색하기</button>
                 </div>
