--- a/pricing.html
+++ b/pricing.html
@@ -81,6 +81,10 @@
                         <option value = "16">듀얼심 개조</option>
                     </select>
                     <button id = "searchPriceButton" onclick = "searchPrice()">검색하기</button>
+
+                    <div id = "result">
+                        
+                    </div>
                 </div>
             </div>
         </div>
