--- a/pricing.html
+++ b/pricing.html
@@ -77,14 +77,15 @@
                         <option value = "12">하단 스피커</option>
                         <option value = "13">볼륨 케이블</option>
                         <option value = "14">전원 케이블</option>
-                        <option value = "15">무선충전 코일</option>
+                        <option value = "15">무선충전 모듈</option>
                         <option value = "16">듀얼심 개조</option>
                     </select>
                     <button id = "searchPriceButton" onclick = "searchPrice()">검색하기</button>
 
                     <div id = "result">
-                        
+
                     </div>
+                    <br><br><br>
                 </div>
             </div>
         </div>
