--- a/pricing.html
+++ b/pricing.html
@@ -79,11 +79,15 @@
                         <option value = "14">전원 케이블</option>
                         <option value = "15">무선충전 모듈</option>
                         <option value = "16">듀얼심 개조</option>
+                        <option value = "17">메인보드 수리</option>
                     </select>
                     <button id = "searchPriceButton" onclick = "searchPrice()">검색하기</button>
 
                     <div id = "result">
-
+                        <p class = "sub-title">부품 단가</p>
+                        <p id = "parts-pricing"></p><br>
+                        <p class = "sub-title">공임 비용</p>
+                        <p id = "service-pricing"></p><br>
                     </div>
                     <br><br><br>
                 </div>
