--- a/service.html
+++ b/service.html
@@ -34,7 +34,7 @@
                         <p class = "sub-title">서울픽스킹—</p>
                         <p class = "title">Service</p>
                     </div>
-                    <div class = "section" id = "page-1">
+                    <div class = "section scroll-overflow" id = "page-1">
 
                     </div>
                 </div>
