--- a/service.html
+++ b/service.html
@@ -34,8 +34,8 @@
                         <p class = "sub-title">서울픽스킹—</p>
                         <p class = "title">Service</p>
                     </div>
-                    <div class = "section scroll-overflow" id = "page-1">
-
+                    <div class = "section" id = "page-1">
+                        <p class = "title">서비스 안내</p>
                     </div>
                 </div>
             </div>
